--- a/index.html
+++ b/index.html
@@ -1,10 +1,18 @@
 <!DOCTYPE html>
+<meta charset="utf-8"> 
 <html>
     <head>
-        <meta charset="utf-8">
-        <title>Website</title>
+        <title>What a cool looking monkey!</title>  
     </head>
     <body>
-        <img src="images/monkey.jpg" alt="Monkey">
+        <h1>Can't you just agree that this is the coolest Monkey you have ever seen?</h1>
+        <img src="Images/monkey.jpg" alt="Monkey">
+        <p class="Editors-Note">So is it cool or <strong>not</strong>?</p>
+        <h2>Here is why I think its cool:</h2>
+        <ul>
+            <li>It has a cool looking eye</li>
+            <li>Thats about it.</li>
+        </ul>
+        <a href="https://www.youtube.com/watch?v=opyPkipNNhE">Click Here for more Information</a>
     </body>
 </html>
