--- a/Minecraft.html
+++ b/Minecraft.html
@@ -15,7 +15,7 @@
     </head>
     <body>
         <h1 id="my-main-title">
-            <em><strong>Minecraft: An Epic Sandbox Survival</strong></em>
+            <em><strong>Minecraft: Sandbox Survival</strong></em>
         </h1>
         <img src="Images/landscape.jpg" alt="Minecraft Landscape">
 
@@ -30,6 +30,9 @@
         </ul>        
 
         <p id="my-link"><a href="https://minecraft.fandom.com/wiki/Minecraft_Wiki">More Information Here</a></p>
+
+        <script src="scripts/minecraftMain.js"></script>
+        <button>Change name!</button>
 
     </body>
 </html>
