--- a/index.html
+++ b/index.html
@@ -14,5 +14,8 @@
             <li>Thats about it.</li>
         </ul>
         <a href="https://www.youtube.com/watch?v=opyPkipNNhE">Click Here for more Information</a>
+
+        <button>Change user</button>
+        <script src="scripts/indexMain."></script>
     </body>
 </html>
