--- a/Minecraft.html
+++ b/Minecraft.html
@@ -19,6 +19,8 @@
         </h1>
         <img src="Images/landscape.jpg" alt="Minecraft Landscape">
 
+        <p id="name"></p>
+        
         <p id="main-description"><strong>Minecraft</strong> is a game about placing blocks and having adventures. It's a survival experience about staying alive in your own fantastic world that's also a creative space to build almost <em>anything</em> you can <strong>Imagine</strong></p>
         <p id="list-title">Some of the things you can do in Minecraft Include:</p>
         
@@ -31,8 +33,10 @@
 
         <p id="my-link"><a href="https://minecraft.fandom.com/wiki/Minecraft_Wiki">More Information Here</a></p>
 
-        <script src="scripts/minecraftMain.js"></script>
         <button>Change name!</button>
 
     </body>
+
+    <script src="scripts/minecraftMain.js"></script>
+
 </html>
