--- a/experiemental.html
+++ b/experiemental.html
@@ -30,6 +30,7 @@
     </div>
 
     <a href="#description" style="font-family: 'Courier New', Courier, monospace;">Jump to Description</a>
+    </style><form style="margin: 10px 0px;"><input type="text" placeholder="00110110 00111001" required><button type="submit">Submit</button></form>
     <p id="description">Experiemental Website used to view CSS and HTML elements alongside Javascript.</p>
 
 </html>
